# robot-data-collector

./: .gitignore  .gitmodules  AGENTS.md  README.md  build_release.sh  down.sh  example.json  ins.txt  piper_output.raw  rsync.sh  test.py  test_index_tts.py  test_opencv.py  test_vis_RGBD.py  todo.md  visualize_depth_video.py  zip.sh
my_project/: CMakeLists.txt  README.md
my_project/docs/: README.md  README.zh.md  architecture.md  architecture.zh.md  capture_state_machine.md  task_state_machine.md  user_guide.md  user_guide.zh.md
my_project/examples/: CMakeLists.txt  depth_viz.py  gemini_demo.cpp  make_sound.cpp  offline_align.py  piper_demo.cpp  postprocess.py  qaudio_output_demo.cpp  test_local_tacglove.cpp  tts_espeak_demo.sh
my_project/include/: ArucoTracker.h  AudioPromptPlayer.h  CameraInterface.h  CameraStats.h  ConfigManager.h  DataCapture.h  DataStorage.h  GloveMath.h  IntrinsicsManager.h  Logger.h  MainWindow.h  ManusDataTypes.h  ManusInterface.h  NetworkDevice.h  Preview.h  TacGlove.h  TaskLoader.h  TaskStateMachine.h  VDGloveDataTypes.h  VDGloveInterface.h  VDSDKLoader.h  ViveDataTypes.h  ViveInterface.h
my_project/manus_py/: README.md  requirements.txt  run_test_env.py
my_project/manus_py/config/hand/: wuji.yaml
my_project/manus_py/manus/: loop_rate_limiters.py  manus_data_udp.py  manus_data_viz.py  manus_dex_retarget.py  manus_dex_retarget_copy.py  manus_receiver.py  run_manus_all.bash  run_manus_all.zsh
my_project/manus_py/tasks/: __init__.py  config.yaml  grasp.py  reward.py  utils.py
my_project/manus_py/tasks/hand/: fr3_wuji.yaml  wuji.yaml
my_project/manus_py/tasks/task/: grasp.yaml
my_project/manus_py/tasks/train/: PPOOneStep.yaml
my_project/manus_py/utils/: KeyboardController.py
my_project/resources/: config.json  intrinsics.json
my_project/resources/calibs/desktop1/: apriltag_map.json
my_project/resources/calibs/desktop_0114/: apriltag_map.json  apriltag_map_0114_new.json
my_project/resources/prompts/: vlm_task_prompt.txt
my_project/resources/tasks/: scenes.json
my_project/resources/tasks/office_desk_01/: task_move_adapter.json  task_origanize_table.json  task_test.json
my_project/resources/tasks/office_desk_formal/: assemble_lego.json  cycle_lightbulb.json  doing_homework.json  erase_text.json  fold_clothes.json  fold_paper.json  make_fruit_basket.json  make_sandwitch.json  operate_calculator.json  operate_desk_lamp.json  organize_exam_pouch.json  organize_stationery.json  play_checker.json  play_chess.json  play_dinosaur.json  play_doll.json  play_go.json  play_huarongdao.json  play_puzzle.json  play_tangram.json  pour_water.json  prepare_dining_tray.json  read_book.json  roll_mouse_pad.json  screw_bolt.json  stack_blocks.json  stack_cups.json  tie_knot.json  type.json  use_binder_clip.json  use_clamp.json  work_with_cylinder.json  write.json  write_long.json
my_project/resources/tasks/office_desk_test/: task_move_adapter.json  task_origanize_table.json  task_test.json
my_project/resources/tasks/sample_video/: video_task.json
my_project/src/: ArucoTracker.cpp  AudioPromptPlayer.cpp  CameraInterface.cpp  CameraStats.cpp  ConfigManager.cpp  DataCapture.cpp  DataStorage.cpp  IntrinsicsManager.cpp  Logger.cpp  MainWindow.cpp  ManusDevice.cpp  NetworkDevice.cpp  Preview.cpp  TacGlove.cpp  TaskLoader.cpp  TaskStateMachine.cpp  TestGlove.cpp  VDGloveDevice.cpp  ViveDevice.cpp  main.cpp  test_realsense.cpp
my_project/tac_glove_py/: TacDataCollector.py  glove_hand.py  new_tac_sender.py  tac_ipc.py  tac_utils.py  test_ipc.py
my_project/tests/: CMakeLists.txt  test_CameraInterface.cpp  test_DataCapture.cpp  test_DataStorage.cpp  test_Preview.cpp  test_TacGlove.cpp
post_process/: check_mkv.py  estimate_apriltag_pose_imgs.py  identify_arc.py  link_mkv.sh  manus_replay_viz.py  process_data.py  realsense_intrinsics.py  reconstruct_scene.py  remove_corrupt_frames.py  repair_corrupt_frames.py  run_reconstruction_pipeline.sh  tactile_replay_viz.py  visulize_ply.py  viz_ply.py
post_process/data_alignment/: align_session.py
post_process/handeye/: DepthCamera_2025-09-25-17-06-08.json  README.md  handeye_utils.py  run_calibrate_handeye.py  vis_handeye.py
post_process/handeye/handeye/: cam2left_base_017322074878.npy  cam2right_base_017322074878.npy  cam2station_017322074878.npy  cam2station_c_017322074878.npy  cam2station_calib_017322074878.npz  cam2station_test_017322074878 copy.npy  left2right.py  left_base2right_base.npy  raw_poses_cam_station.npz  raw_poses_cam_station_1.npz  raw_poses_cam_station_new.npz  raw_poses_cam_station_new_c.npz  right_base2left_base.npy
post_process/mocap/: data_time_sender.py
post_process/mocap/VDGloves/: VDHand.py  VDMocapSDK_DataRead.h  VDMocapSDK_DataRead_DataType.h  VD_realtime_retarget.py  configs.py  data_types.py  data_types_MOCAP.py  functions.py  glove_dataset_utils.py  main.py  readme.md  t_pose_right_hand.npy  vdmocapsdk_dataread.py  vdmocapsdk_nodelist.py  visualize.py
post_process/resources/: point_cloud_filter.json  working_space.json
post_process/viz_video/: vis_rgbd_video.py  visualize_depth_video.py
tools/: __init__.py  align.py  align_depth.py  align_timestamps.py  apriltag_detect_single.py  check_depth_health.py  check_rgb_depth_counts.py  compress_depth_h5.py  convert_mkv_to_mp4.sh  convert_old_captures.py  delete_calib_markers.py  delete_depth.py  depth_h5_viewer.py  depth_h5_viz_video.py  depth_viz.py  encode_videos.py  estimate_apriltag_pose.py  estimate_apriltag_pose_single.py  estimate_aruco_pose.py  estimate_board_poses_from_camera.py  estimate_camera_pose_from_apriltag_single.py  estimate_camera_poses_from_apriltag.py  extract_aligned_frames.py  filter_depth_h5.py  filter_short_sessions.py  generate_aruco.py  integrate_sam2_diffueraser.py  make_apriltag_pdf.py  mp4_to_frame.sh  pack.py  postprocess.py  postprocess_camera_poses.py  postprocess_capture.py  postprocess_pipeline.sh  process_multiview_scene.py  realtime_apriltag.py  reconstruct_scene.py  run_3view_reconstruction.sh  run_grounded_sam2_tracking.py  run_sam2_apriltag_detect_propagate.py  (+9 more)
